[package]
name = "pjp_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde-aux = "4.1.2"
serde = "1.0.152"
prometheus-client = "0.19.0"
chrono = "0.4.23"
chrono-tz = "0.8.1"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
http-body-util = "0.1.0-rc.2"
